# picoxide

./: Cargo.toml  Embed.toml  README.md
src/: error.rs  main.rs  prelude.rs
src/utils/: controller.rs  gcode_format.rs  mod.rs
