[package]
name = "picoxide"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
cortex-m-rtic = "1.1.4"
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
gcode = { version="0.6.1",  default-features = false , features = [] }
heapless = "0.8.0"
panic-halt = "1.0.0"
rp235x-hal = { version = "0.2.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"] }
usb-device = "0.3.2"
usbd-serial = "0.2.2"
arrayvec = { version = "0.7.6", default-features = false }

# Optimize all sub-level packages, toplevel remains debuggable
[profile.dev.package."*"] # +
opt-level = "z" # +

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
debug = true
#strip = "symbols"
